bk_ida/gccida/c3/c_sizeof
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/c_sizeof/src/c-typeck.c:1185:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v2; // rdx 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/c_sizeof/src/c-typeck.c:1186:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v3; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/c_sizeof/src/c-typeck.c:1187:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *imag; // rbx 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/c_sizeof/src/c-typeck.c:1188:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v6; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/c_sizeof/src/c-typeck.c:1195:19: error: expected expression
v2 = ( tree_node *)*( &global_trees + 16); 
                  ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/c_sizeof/src/c-typeck.c:1195:8: error: use of undeclared identifier 'tree_node'
v2 = ( tree_node *)*( &global_trees + 16); 
       ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/c_sizeof/src/c-typeck.c:1215:19: error: expected expression
v2 = ( tree_node *)*( &global_trees + 15); 
                  ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/c_sizeof/src/c-typeck.c:1215:8: error: use of undeclared identifier 'tree_node'
v2 = ( tree_node *)*( &global_trees + 15); 
       ^
8 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/c_sizeof/src/obj/c-typeck.o] Error 1
